# BLOG-POST-V3

./: README.md  forms.py  main.py  pyproject.toml  requirements.txt
templates/: about.html  footer.html  header.html  index.html  login.html  post.html  register.html
