[project]
name = "day-69-blog-website-final"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "bootstrap-flask==2.2.0",
    "flask==2.3.2",
    "flask-ckeditor==0.4.6",
    "flask-gravatar==0.5.0",
    "flask-login==0.6.3",
    "flask-sqlalchemy==3.1.1",
    "flask-wtf==1.2.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy==2.0.25",
    "werkzeug==3.0.0",
    "wtforms==3.0.1",
]
